--- a/demo-start-v12/src/app/customers/customer.component.html
+++ b/demo-start-v12/src/app/customers/customer.component.html
@@ -1,32 +1,31 @@
 <div class="card">
-  <div class="card-header">
-    Sign Up!
-  </div>
+  <div class="card-header">Sign Up!</div>
 
   <div class="card-body">
-    <form novalidate
-          (ngSubmit)="save(signupForm)"
-          #signupForm="ngForm">
-
+    <form (ngSubmit)="save()" [formGroup]="customerForm">
       <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label"
-               for="firstNameId">First Name</label>
+        <label class="col-md-2 col-form-label" for="firstNameId"
+          >First Name</label
+        >
         <div class="col-md-8">
-          <input class="form-control"
-                 id="firstNameId"
-                 type="text"
-                 placeholder="First Name (required)"
-                 required
-                 minlength="3"
-                 [(ngModel)]=customer.firstName
-                 name="firstName"
-                 #firstNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }" />
+          <input
+            class="form-control"
+            id="firstNameId"
+            type="text"
+            placeholder="First Name (required)"
+            formControlName="firstName"
+            [ngClass]="{
+              'is-invalid':
+                (customerForm.get('firstName')?.touched ||
+                  customerForm.get('firstName')?.dirty) &&
+                !customerForm.get('firstName')?.valid
+            }"
+          />
           <span class="invalid-feedback">
-            <span *ngIf="firstNameVar.errors?.required">
+            <span *ngIf="customerForm.get('firstName')?.errors?.required">
               Please enter your first name.
             </span>
-            <span *ngIf="firstNameVar.errors?.minlength">
+            <span *ngIf="customerForm.get('firstName')?.errors?.minlength">
               The first name must be longer than 3 characters.
             </span>
           </span>
@@ -34,51 +33,112 @@
       </div>
 
       <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label"
-               for="lastNameId">Last Name</label>
+        <label class="col-md-2 col-form-label" for="lastNameId"
+          >Last Name</label
+        >
         <div class="col-md-8">
-          <input class="form-control"
-                 id="lastNameId"
-                 type="text"
-                 placeholder="Last Name (required)"
-                 required
-                 maxlength="50"
-                 [(ngModel)]="customer.lastName"
-                 name="lastName"
-                 #lastNameVar="ngModel"
-                 [ngClass]="{'is-invalid': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }" />
+          <input
+            class="form-control"
+            id="lastNameId"
+            type="text"
+            placeholder="Last Name (required)"
+            formControlName="lastName"
+            [ngClass]="{
+              'is-invalid':
+                (customerForm.get('lastName')?.touched ||
+                  customerForm.get('lastName')?.dirty) &&
+                !customerForm.get('lastName')?.valid
+            }"
+          />
           <span class="invalid-feedback">
-            <span *ngIf="lastNameVar.errors?.required">
+            <span *ngIf="customerForm.get('lastName')?.errors?.required">
               Please enter your last name.
             </span>
-            <span *ngIf="lastNameVar.errors?.maxlength">
+            <span *ngIf="customerForm.get('lastName')?.errors?.maxlength">
               The last name must be less than 50 characters.
             </span>
           </span>
         </div>
       </div>
 
+      <div formGroupName="emailGroup">
       <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label"
-               for="emailId">Email</label>
+        <label class="col-md-2 col-form-label" for="emailId">Email</label>
         <div class="col-md-8">
-          <input class="form-control"
-                 id="emailId"
-                 type="email"
-                 placeholder="Email (required)"
-                 required
-                 email
-                 [(ngModel)]="customer.email"
-                 name="email"
-                 #emailVar="ngModel"
-                 [ngClass]="{'is-invalid': (emailVar.touched || emailVar.dirty) && !emailVar.valid }" />
+          <input
+            class="form-control"
+            id="emailId"
+            type="email"
+            placeholder="Email (required)"
+            formControlName="email"
+            [ngClass]="{'is-invalid': emailMessage !== ''}"
+            />
           <span class="invalid-feedback">
-            <span *ngIf="emailVar.errors?.required">
+            <span *ngIf="emailMessage==='required'">
               Please enter your email address.
             </span>
-            <span *ngIf="emailVar.errors?.email">
+            <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.required">
+              Please enter your email address.
+            </span> -->
+            <span *ngIf="emailMessage==='email'">
               Please enter a valid email address.
             </span>
+            <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.email">
+              Please enter a valid email address.
+            </span> -->
+          </span>
+        </div>
+      </div>
+
+      <!-- confirm email -->
+      <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label" 
+        for="confirmEmailId"
+          >Confirm Email</label
+        >
+        <div class="col-md-8">
+          <input
+            class="form-control"
+            id="confirmEmailId"
+            type="email"
+            placeholder="Confirm Email (required)"
+            formControlName="confirmEmail"
+            [ngClass]="{
+              'is-invalid':
+                customerForm.get('emailGroup')?.errors ||            
+                (customerForm.get('emailGroup.confirmEmail')?.touched ||
+                  customerForm.get('emailGroup.confirmEmail')?.dirty) &&
+                !customerForm.get('emailGroup.confirmEmail')?.valid
+            }"
+          />
+          <span class="invalid-feedback">
+            <span *ngIf="customerForm.get('emailGroup.confirmEmail')?.errors?.required">
+              Please confirm your email address.
+            </span>
+            <span *ngIf="customerForm.get('emailGroup.confirmEmail')?.errors?.email">
+              Please enter a valid email address.
+            </span>
+            <span *ngIf="customerForm.get('emailGroup')?.errors?.match">
+              The email addresses do not match.
+            </span>
+          </span>
+        </div>
+      </div>
+    </div>
+
+      <div *ngIf="phoneRequired" [@slideIn]
+      class="form-group row mb-2">
+        <label class="col-md-2 col-form-label" for="phoneId">Phone </label>
+        <div class="col-md-8">
+          <input
+            class="form-control"
+            type="tel"
+            placeholder="Phone"
+            formControlName="phone"
+            [ngClass]="{ 'is-invalid': !customerForm.get('phone')?.valid }"
+          />
+          <span class="invalid-feedback">
+            Please enter your phone number.
           </span>
         </div>
       </div>
@@ -87,17 +147,48 @@
         <div class="col-md-8">
           <div class="form-check">
             <label class="form-check-label">
-              <input class="form-check-input"
-                     id="sendCatalogId"
-                     type="checkbox"
-                     [(ngModel)]="customer.sendCatalog"
-                     name="sendCatalog"> Send me your catalog
+              <input
+                class="form-check-input"
+                id="sendCatalogId"
+                type="checkbox"
+                formControlName="sendCatalog"
+              />
+              Send me your catalog
             </label>
           </div>
         </div>
       </div>
 
-      <div *ngIf="customer.sendCatalog">
+      <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label">Notification</label>
+        <div class="col-md-8">
+          <div class="form-check form-check-inline">
+            <label class="form-check-label">
+              <input
+                class="form-check-input"
+                type="radio"
+                value="email"
+                formControlName="notification"
+              />
+              Email
+            </label>
+          </div>
+          <div class="form-check form-check-inline">
+            <label class="form-check-label">
+              <input
+              
+                class="form-check-input"
+                type="radio"
+                value="text"
+                formControlName="notification"
+              />
+              Text
+            </label>
+          </div>
+        </div>
+      </div>
+
+      <div *ngIf="customerForm.get('sendCatalog')!.value">
         <div class="form-group row mb-2">
           <label class="col-md-2 col-form-label pt-0">Address Type</label>
           <div class="col-md-8">
@@ -107,8 +198,8 @@
                        id="addressType1Id"
                        type="radio"
                        value="home"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Home
+                       formControlName="addressType"
+                       > Home
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -117,8 +208,8 @@
                        id="addressType1Id"
                        type="radio"
                        value="work"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Work
+                       formControlName="addressType"
+                       > Work
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -126,9 +217,8 @@
                 <input class="form-check-input"
                        id="addressType1Id"
                        type="radio"
-                       value="other"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Other
+                       value="other"formControlName="addressType"
+                       > Other
               </label>
             </div>
           </div>
@@ -142,7 +232,7 @@
                    id="street1Id"
                    type="text"
                    placeholder="Street address"
-                   [(ngModel)]="customer.street1"
+                   formControlName="street1"
                    name="street1">
           </div>
         </div>
@@ -155,7 +245,7 @@
                    id="street2Id"
                    type="text"
                    placeholder="Street address (second line)"
-                   [(ngModel)]="customer.street2"
+                   formControlName="street2"
                    name="street2">
           </div>
         </div>
@@ -168,13 +258,13 @@
                    id="cityId"
                    type="text"
                    placeholder="City"
-                   [(ngModel)]="customer.city"
+                   formControlName="city"
                    name="city">
           </div>
           <div class="col-md-3">
             <select class="form-control"
                     id="stateId"
-                    [(ngModel)]="customer.state"
+                    formControlName="state"
                     name="state">
               <option value=""
                       disabled
@@ -195,19 +285,25 @@
                    id="zipId"
                    type="number"
                    placeholder="Zip Code"
-                   [(ngModel)]="customer.zip"
+                   formControlName="zip"
                    name="zip">
           </div>
         </div>
-      </div>
+      </div> 
 
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
-          <button class="btn btn-primary mr-3"
-                  type="submit"
-                  style="width:80px"
-                  [title]="signupForm.valid ? 'Save your entered data' : 'Disabled until the form data is valid'"
-                  [disabled]="!signupForm.valid">
+          <button
+            class="btn btn-primary mr-3"
+            type="submit"
+            style="width: 80px"
+            [title]="
+              customerForm.valid
+                ? 'Save your entered data'
+                : 'Disabled until the form data is valid'
+            "
+            [disabled]="!customerForm.valid"
+          >
             Save
           </button>
         </div>
@@ -215,7 +311,6 @@
     </form>
   </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }}
-<br>Touched: {{ signupForm.touched }}
-<br>Valid: {{ signupForm.valid }}
-<br>Value: {{ signupForm.value | json }}
+<br />Dirty: {{ customerForm.dirty }} <br />Touched: {{ customerForm.touched }}
+<br />Valid: {{ customerForm.valid }} <br />Value:
+{{ customerForm.value | json }}
