--- a/demo-start-v12/src/app/customers/customer.component.html
+++ b/demo-start-v12/src/app/customers/customer.component.html
@@ -62,72 +62,78 @@
       </div>
 
       <div formGroupName="emailGroup">
-      <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label" for="emailId">Email</label>
-        <div class="col-md-8">
-          <input
-            class="form-control"
-            id="emailId"
-            type="email"
-            placeholder="Email (required)"
-            formControlName="email"
-            [ngClass]="{'is-invalid': emailMessage !== ''}"
+        <div class="form-group row mb-2">
+          <label class="col-md-2 col-form-label" for="emailId">Email</label>
+          <div class="col-md-8">
+            <input
+              class="form-control"
+              id="emailId"
+              type="email"
+              placeholder="Email (required)"
+              formControlName="email"
+              [ngClass]="{ 'is-invalid': emailMessage !== '' }"
             />
-          <span class="invalid-feedback">
-            <span *ngIf="emailMessage==='required'">
-              Please enter your email address.
-            </span>
-            <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.required">
+            <span class="invalid-feedback">
+              <span *ngIf="emailMessage === 'required'">
+                Please enter your email address.
+              </span>
+              <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.required">
               Please enter your email address.
             </span> -->
-            <span *ngIf="emailMessage==='email'">
-              Please enter a valid email address.
-            </span>
-            <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.email">
+              <span *ngIf="emailMessage === 'email'">
+                Please enter a valid email address.
+              </span>
+              <!-- <span *ngIf="customerForm.get('emailGroup.email')?.errors?.email">
               Please enter a valid email address.
             </span> -->
-          </span>
+            </span>
+          </div>
+        </div>
+
+        <!-- confirm email -->
+        <div class="form-group row mb-2">
+          <label class="col-md-2 col-form-label" for="confirmEmailId"
+            >Confirm Email</label
+          >
+          <div class="col-md-8">
+            <input
+              class="form-control"
+              id="confirmEmailId"
+              type="email"
+              placeholder="Confirm Email (required)"
+              formControlName="confirmEmail"
+              [ngClass]="{
+                'is-invalid':
+                  customerForm.get('emailGroup')?.errors ||
+                  ((customerForm.get('emailGroup.confirmEmail')?.touched ||
+                    customerForm.get('emailGroup.confirmEmail')?.dirty) &&
+                    !customerForm.get('emailGroup.confirmEmail')?.valid)
+              }"
+            />
+            <span class="invalid-feedback">
+              <span
+                *ngIf="
+                  customerForm.get('emailGroup.confirmEmail')?.errors?.required
+                "
+              >
+                Please confirm your email address.
+              </span>
+              <span
+                *ngIf="
+                  customerForm.get('emailGroup.confirmEmail')?.errors?.email
+                "
+              >
+                Please enter a valid email address.
+              </span>
+              <span *ngIf="customerForm.get('emailGroup')?.errors?.match">
+                The email addresses do not match.
+              </span>
+            </span>
+          </div>
         </div>
       </div>
 
-      <!-- confirm email -->
-      <div class="form-group row mb-2">
-        <label class="col-md-2 col-form-label" 
-        for="confirmEmailId"
-          >Confirm Email</label
-        >
-        <div class="col-md-8">
-          <input
-            class="form-control"
-            id="confirmEmailId"
-            type="email"
-            placeholder="Confirm Email (required)"
-            formControlName="confirmEmail"
-            [ngClass]="{
-              'is-invalid':
-                customerForm.get('emailGroup')?.errors ||            
-                (customerForm.get('emailGroup.confirmEmail')?.touched ||
-                  customerForm.get('emailGroup.confirmEmail')?.dirty) &&
-                !customerForm.get('emailGroup.confirmEmail')?.valid
-            }"
-          />
-          <span class="invalid-feedback">
-            <span *ngIf="customerForm.get('emailGroup.confirmEmail')?.errors?.required">
-              Please confirm your email address.
-            </span>
-            <span *ngIf="customerForm.get('emailGroup.confirmEmail')?.errors?.email">
-              Please enter a valid email address.
-            </span>
-            <span *ngIf="customerForm.get('emailGroup')?.errors?.match">
-              The email addresses do not match.
-            </span>
-          </span>
-        </div>
-      </div>
-    </div>
-
-      <div *ngIf="phoneRequired" [@slideIn]
-      class="form-group row mb-2">
+      <div *ngIf="phoneRequired" [@slideIn] class="form-group row mb-2">
         <label class="col-md-2 col-form-label" for="phoneId">Phone </label>
         <div class="col-md-8">
           <input
@@ -176,7 +182,6 @@
           <div class="form-check form-check-inline">
             <label class="form-check-label">
               <input
-              
                 class="form-check-input"
                 type="radio"
                 value="text"
@@ -189,107 +194,128 @@
       </div>
 
       <div *ngIf="customerForm.get('sendCatalog')!.value">
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label pt-0">Address Type</label>
-          <div class="col-md-8">
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="home"
-                       formControlName="addressType"
-                       > Home
-              </label>
+        <div formGroupName="addresses">
+          <div class="form-group row mb-2">
+            <label class="col-md-2 col-form-label pt-0">Address Type</label>
+            <div class="col-md-8">
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input
+                    class="form-check-input"
+                    id="addressType1Id"
+                    type="radio"
+                    value="home"
+                    formControlName="addressType"
+                  />
+                  Home
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input
+                    class="form-check-input"
+                    id="addressType1Id"
+                    type="radio"
+                    value="work"
+                    formControlName="addressType"
+                  />
+                  Work
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input
+                    class="form-check-input"
+                    id="addressType1Id"
+                    type="radio"
+                    value="other"
+                    formControlName="addressType"
+                  />
+                  Other
+                </label>
+              </div>
             </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="work"
-                       formControlName="addressType"
-                       > Work
-              </label>
-            </div>
-            <div class="form-check form-check-inline">
-              <label class="form-check-label">
-                <input class="form-check-input"
-                       id="addressType1Id"
-                       type="radio"
-                       value="other"formControlName="addressType"
-                       > Other
-              </label>
+          </div>
+
+          <div class="form-group row mb-2">
+            <label class="col-md-2 col-form-label" for="street1Id"
+              >Street Address 1</label
+            >
+            <div class="col-md-8">
+              <input
+                class="form-control"
+                id="street1Id"
+                type="text"
+                placeholder="Street address"
+                formControlName="street1"
+                name="street1"
+              />
             </div>
           </div>
-        </div>
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street1Id">Street Address 1</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street1Id"
-                   type="text"
-                   placeholder="Street address"
-                   formControlName="street1"
-                   name="street1">
+          <div class="form-group row mb-2">
+            <label class="col-md-2 col-form-label" for="street2Id"
+              >Street Address 2</label
+            >
+            <div class="col-md-8">
+              <input
+                class="form-control"
+                id="street2Id"
+                type="text"
+                placeholder="Street address (second line)"
+                formControlName="street2"
+                name="street2"
+              />
+            </div>
           </div>
-        </div>
 
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="street2Id">Street Address 2</label>
-          <div class="col-md-8">
-            <input class="form-control"
-                   id="street2Id"
-                   type="text"
-                   placeholder="Street address (second line)"
-                   formControlName="street2"
-                   name="street2">
+          <div class="form-group row mb-2">
+            <label class="col-md-2 col-form-label" for="cityId"
+              >City, State, Zip Code</label
+            >
+            <div class="col-md-3">
+              <input
+                class="form-control"
+                id="cityId"
+                type="text"
+                placeholder="City"
+                formControlName="city"
+                name="city"
+              />
+            </div>
+            <div class="col-md-3">
+              <select
+                class="form-control"
+                id="stateId"
+                formControlName="state"
+                name="state"
+              >
+                <option value="" disabled selected hidden>
+                  Select a State...
+                </option>
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div>
+            <div class="col-md-2">
+              <input
+                class="form-control"
+                id="zipId"
+                type="number"
+                placeholder="Zip Code"
+                formControlName="zip"
+                name="zip"
+              />
+            </div>
           </div>
         </div>
-
-        <div class="form-group row mb-2">
-          <label class="col-md-2 col-form-label"
-                 for="cityId">City, State, Zip Code</label>
-          <div class="col-md-3">
-            <input class="form-control"
-                   id="cityId"
-                   type="text"
-                   placeholder="City"
-                   formControlName="city"
-                   name="city">
-          </div>
-          <div class="col-md-3">
-            <select class="form-control"
-                    id="stateId"
-                    formControlName="state"
-                    name="state">
-              <option value=""
-                      disabled
-                      selected
-                      hidden>Select a State...</option>
-              <option value="AL">Alabama</option>
-              <option value="AK">Alaska</option>
-              <option value="AZ">Arizona</option>
-              <option value="AR">Arkansas</option>
-              <option value="CA">California</option>
-              <option value="CO">Colorado</option>
-              <option value="WI">Wisconsin</option>
-              <option value="WY">Wyoming</option>
-            </select>
-          </div>
-          <div class="col-md-2">
-            <input class="form-control"
-                   id="zipId"
-                   type="number"
-                   placeholder="Zip Code"
-                   formControlName="zip"
-                   name="zip">
-          </div>
-        </div>
-      </div> 
+      </div>
 
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
